<resources>
    <string name="app_name">Litera</string>
    <string name="shuffle_btn">Shuffle</string>
    <string name="favourites_btn">Favorites</string>
    <string name="playlist_btn">Queue</string>
    <string name="total_songs">Total Audiobooks: </string>
    <string name="world_of_music">Litera Audiobooks</string>
    <string name="song_name">Book Title</string>
    <string name="back_btn">Back</string>
    <string name="favorite_btn">Favorite</string>
    <string name="end_tv">Loading</string>
    <string name="start_tv">00:00</string>
    <string name="repeat_btn">Repeat</string>
    <string name="equalizer_btn">Equalizer</string>
    <string name="timer_btn">Timer</string>
    <string name="share_btn">Share</string>
    <string name="previous_btn">Previous</string>
    <string name="pause_play_btn">Pause/Play</string>
    <string name="next_btn">Next</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="app_icon">Icon</string>
    <string name="text_nav">Welcome to\nLitera Audiobooks</string>
    <string name="feedback">Feedback</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="exit">Exit</string>
    <string name="song_album">Book Album</string>
    <string name="min_5">5 Minutes</string>
    <string name="min_10">10 Minutes</string>
    <string name="min_15">15 Minutes</string>
    <string name="min_30">30 Minutes</string>
    <string name="min_45">45 Minutes</string>
    <string name="min_60">60 Minutes</string>
    <string name="min_90">90 Minutes</string>
    <string name="min_120">120 Minutes</string>
    <string name="min_5_lit">Playback will stop after 5 minutes</string>
    <string name="min_10_lit">Playback will stop after 10 minutes</string>
    <string name="min_15_lit">Playback will stop after 15 minutes</string>
    <string name="min_30_lit">Playback will stop after 30 minutes</string>
    <string name="min_45_lit">Playback will stop after 45 minutes</string>
    <string name="min_60_lit">Playback will stop after 60 minutes</string>
    <string name="min_90_lit">Playback will stop after 90 minutes</string>
    <string name="min_120_lit">Playback will stop after 120 minutes</string>
    <string name="play_speed_at_05x">0.5x</string>
    <string name="play_speed_at_07x">0.7x</string>
    <string name="play_speed_at_1x">1.0x</string>
    <string name="play_speed_at_15x">1.5x</string>
    <string name="play_speed_at_2x">2.0x</string>
    <string name="play_speed_at_05x_lit">The book will be played at 0.5x</string>
    <string name="play_speed_at_07x_lit">The book will be played at 0.7x</string>
    <string name="play_speed_at_1x_lit">The book will be played at 1.0x</string>
    <string name="play_speed_at_15x_lit">The book will be played at 1.5x</string>
    <string name="play_speed_at_2x_lit">The book will be played at 2.0x</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="text_dialog_permissions">Previously some permissions have been rejected. Do you want to open settings to grant them now?</string>
    <string name="search_view">Search</string>
    <string name="press_back_again_to_exit">Press back again to exit</string>
    <string name="do_you_want_to_configure_permissions_now">\nDo you want to configure permissions now?</string>
    <string name="you_will_not_be_able_to_access_audio_files">• You will not be able to access audio files\n</string>
    <string name="you_will_not_be_able_to_reproduce_in_background">• You will not be able to reproduce in background\n</string>
    <string name="inaccessible_functionality">Inaccessible functionality:\n\n</string>
    <string name="required_permissions">Required permissions</string>
    <string name="not_now">Not now</string>
    <string name="stop_timer">Stop timer</string>
    <string name="do_you_want_to_cancel_the_timer">Do you want to cancel the timer?</string>
    <string name="sharing_your_audiobook_file">Sharing your audiobook file!</string>
    <string name="min_endchap">Chapter end</string>
    <string name="min_none">None</string>
    <string name="search_placeholder">Search books...</string>
    <string name="sort_title">Title (A-Z)</string>
    <string name="sort_artist">Author</string>
    <string name="sort_progress">Progress</string>
    <string name="sort_recent">Recent</string>
    <string name="added_to_queue">Added to queue: %1$s</string>
    <string name="no_favorites_yet">No favorites yet</string>
    <string name="my_favorites">My Favorites</string>
    <string name="appearance">Appearance</string>
    <string name="dynamic_colors">Dynamic Colors</string>
    <string name="dynamic_colors_desc">Adapt the interface color to the current book cover.</string>
    <string name="activity_history">Activity History</string>
    <string name="entry_limit">Entry Limit</string>
    <string name="entry_limit_desc">Maximum number of actions to remember in the current session.</string>
    <string name="library">Library</string>
    <string name="scan_all_memory">Scan All Memory</string>
    <string name="scan_all_memory_desc">Scan all audio files on the device</string>
    <string name="folders_to_scan">Folders to Scan</string>
    <string name="add_folder">Add Folder</string>
    <string name="rescan_folders">Rescan Folders</string>
    <string name="audiobook_folder">Audiobook Folder</string>
    <string name="scanning_all_memory">Scanning all memory</string>
    <string name="default_equalizer">Default Equalizer</string>
    <string name="default_equalizer_desc">Preset applied to books without a custom equalizer setting.</string>
    <string name="about_app">About App</string>
    <string name="undo_seek">UNDO SEEK</string>
    <string name="manual_bookmarks">Manual Bookmarks</string>
    <string name="no_bookmarks_yet">No bookmarks saved yet.</string>
    <string name="add_bookmark">Add Bookmark</string>
    <string name="save_position_label">Position will be saved: %1$s</string>
    <string name="note_label">Note (optional)</string>
    <string name="note_placeholder">e.g. Important quote</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="chapters">Chapters</string>
    <string name="no_chapters_detected">No chapters detected.</string>
    <string name="activity_history_title">Activity History</string>
    <string name="no_activity_yet">No actions recorded yet.</string>
    <string name="in_audio_at">In audio: %1$s</string>
    <string name="playback_speed_title">Narrative Speed</string>
    <string name="sleep_timer_title">Sleep Timer</string>
    <string name="disable_timer">Disable Timer</string>
    <string name="playback_queue_title">Playback Queue</string>
    <string name="empty_queue">The queue is empty.</string>
    <string name="unknown_title">Untitled</string>
    <string name="unknown_artist">Unknown Author</string>
    <string name="view_in_folder">View in Folder</string>
    <string name="shake_to_extend">Shake to Extend</string>
    <string name="shake_to_extend_desc">Shake your phone during the last minute to restart the timer.</string>
    <string name="vibration_warning">Vibration Warning</string>
    <string name="vibration_warning_desc">Vibrate when the timer is about to finish.</string>
    <string name="sound_warning">Sound Warning</string>
    <string name="sound_warning_desc">Play a soft beep before stopping the audio.</string>
    <string name="shake_visual_prompt">SHAKE TO EXTEND!</string>
    <string name="share_file_warning_title">Share large file</string>
    <string name="share_file_warning_message">Audiobooks are usually very large files. Preparing to share may take a moment depending on the size. Do you want to continue?</string>
    <string name="confirm">Confirm</string>
    <string name="send">Send</string>
    <string name="receive">Receive</string>
    <string name="book_details">Book Details</string>
    <string name="retry">Retry</string>
    <string name="address">Address: %1$s</string>
    <string name="manual">Manual</string>
    <string name="camera">Camera</string>
    <string name="permission">Permission</string>
    <string name="your_ip">Your IP: %1$s</string>
    <string name="finish_and_exit">Finish and Exit</string>
    <string name="welcome_title">Welcome to Litera!</string>
    <string name="welcome_desc">To start, we need you to select the folder where you store your audiobooks.</string>
    <string name="select_folder">Select Folder</string>
    <string name="onboarding_note">You can change this later in Settings.</string>
    <string name="transfer_by_qr">Receive audiobook via QR</string>
    <string name="transfer_by_qr_desc">No books? Receive one instantly from another device.</string>
    <string name="book_detected">Book Detected</string>
    <string name="existing_book_msg">%1$s detected in your library. What do you want to do?</string>
    <string name="sync_progress_only">Sync Progress Only (Instant)</string>
    <string name="download_full_book">Download Full Book</string>
    <string name="sending">Sending: %1$s</string>
    <string name="receiving">Receiving: %1$s</string>
    <string name="book_sent">Book sent successfully!</string>
    <string name="book_received">Book received in Inbox!</string>
    <string name="synced_via_qr">Synced via QR!</string>
    <string name="connecting">Connecting...</string>
    <string name="waiting_receiver">Waiting for receiver...</string>
    <string name="qr_generated">QR Generated. Scan it.</string>
    <string name="cloud_sync">Cloud Sync</string>
    <string name="cloud_sync_desc">Sync your progress on Google Drive to never lose your progress.</string>
    <string name="connect_google_drive">Connect Google Drive</string>
    <string name="last_sync">Last sync</string>
    <string name="never">Never</string>
    <string name="sync_now">Sync now</string>
    <string name="stop_sleep_timer">Stop Sleep Timer</string>
    <string name="playback_speed_selector">Playback Speed</string>
    <string name="theme_mode">App Theme</string>
    <string name="theme_system">System</string>
    <string name="theme_light">Light</string>
    <string name="theme_dark">Dark</string>
    <string name="lock_screen">Lock screen</string>
    <string name="screen_locked">Screen locked</string>
    <string name="unlock">Unlock</string>
    <string name="undo">Undo</string>
    <string name="rewind_30s">Rewind 30s</string>
    <string name="fast_forward_30s">Fast forward 30s</string>
    <string name="layout_toggle">Toggle layout</string>
    <string name="scanning_progress">Scanning: %1$d / %2$d files</string>
    <string name="loading_library">Loading library…</string>
    <string name="no_audiobooks">No audiobooks</string>
    <string name="no_audiobooks_in_memory">No audiobooks found in memory</string>
    <string name="no_audiobooks_in_folder">Add audio files to your selected folder to get started</string>
    <string name="scan_memory_btn">Scan memory</string>
    <string name="scan_folders_btn">Scan folders</string>
    <string name="files_in_collection">+%1$d files in this collection</string>
    <string name="edit_metadata">Edit metadata</string>
    <string name="detail_file_name">File name</string>
    <string name="detail_location">Location</string>
    <string name="detail_size">Size</string>
    <string name="detail_duration">Duration</string>
    <string name="detail_format">Format</string>
    <string name="detail_series">Series</string>
    <string name="detail_year">Year</string>
    <string name="detail_genre">Genre</string>
    <string name="detail_volume">Vol. No.</string>
    <string name="select_explorer">Select a file explorer</string>
    <string name="no_explorer_found">No compatible explorer found</string>
    <string name="edit_metadata_title">Edit Metadata</string>
    <string name="field_title">Title</string>
</resources>