<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
  <item android:id="@+id/navFeedback"
      android:contentDescription="@string/feedback"
      android:title="@string/feedback"
      android:icon="@drawable/feedback_icon"/>

    <item android:id="@+id/navSettings"
        android:contentDescription="@string/settings"
        android:title="@string/settings"
        android:icon="@drawable/settings_icon"/>

    <item android:id="@+id/navAbout"
        android:contentDescription="@string/about"
        android:title="@string/about"
        android:icon="@drawable/about_icon"/>

    <item android:id="@+id/navExit"
        android:contentDescription="@string/exit"
        android:title="@string/exit"
        android:icon="@drawable/exit_icon"/>
</menu>