<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp">

    <LinearLayout
        android:id="@+id/speed05x"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/speed_0_5x_icon"
            app:tint="@color/cool_pink"
            android:layout_margin="8dp"
            android:contentDescription="@string/play_speed_at_05x_lit"
            />
        <TextView
            android:id="@+id/speed05xText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/play_speed_at_05x"
            android:textColor="@color/black"
            android:textSize="18dp"
            android:padding="8dp"
            />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/speed075x"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/speed_0_75x_icon"
            app:tint="@color/cool_pink"
            android:layout_margin="8dp"
            android:contentDescription="@string/play_speed_at_075x_lit"
            />
        <TextView
            android:id="@+id/speed075xText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/play_speed_at_075x"
            android:textColor="@color/black"
            android:textSize="18dp"
            android:padding="8dp"
            />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/speed1x"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/speed_1x_icon"
            app:tint="@color/cool_pink"
            android:layout_margin="8dp"
            android:contentDescription="@string/play_speed_at_1x_lit"
            />
        <TextView
            android:id="@+id/speed1xText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/play_speed_at_1x"
            android:textColor="@color/black"
            android:textSize="18dp"
            android:padding="8dp"
            />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/speed15x"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/speed_1_5x_icon"
            app:tint="@color/cool_pink"
            android:layout_margin="8dp"
            android:contentDescription="@string/play_speed_at_15x_lit"
            />
        <TextView
            android:id="@+id/speed15xText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/play_speed_at_15x"
            android:textColor="@color/black"
            android:textSize="18dp"
            android:padding="8dp"
            />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/speed2x"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/speed_2x_icon"
            app:tint="@color/cool_pink"
            android:layout_margin="8dp"
            android:contentDescription="@string/play_speed_at_2x_lit"
            />
        <TextView
            android:id="@+id/speed2xText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/play_speed_at_2x"
            android:textColor="@color/black"
            android:textSize="18dp"
            android:padding="8dp"

            />
    </LinearLayout>
</LinearLayout>